--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,4 @@ phases:
   post_build:
     commands:
       - echo Build completed on date
-      - sls deploy --aws-profile slack-codebuild
+      - sls deploy
