--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ provider:
   timeout: 5
   stage: ${opt:stage, 'dev'}
   memorySize: 128
+  profile: slack
 functions:
   dispatcher:
     handler: bot.run
