--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,7 @@
 version: 0.2
-
+env: 
+  secrets-manager:
+    key: SERVERLESS_ACESSS_KEY
 phases:
   install:
     runtime-versions:
@@ -14,6 +16,8 @@ phases:
     commands:
       - echo Build started on date
       - echo Compiling the Node.js code
+      - export AWS_ACCESS_KEY_ID=AKIAURNRGO3INWABY2CU
+      - export AWS_SECRET_ACCESS_KEY=${env.secrets-manager.SERVERLESS_ACESSS_KEY}
       
   post_build:
     commands:
