--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,8 @@
 version: 0.2
+
 env: 
   secrets-manager:
-    key: SERVERLESS_ACESSS_KEY
+    key: SERVERLESS_ACCESS_KEY
 phases:
   install:
     runtime-versions:
@@ -9,17 +10,18 @@ phases:
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
-      - npm install -g serverless
       - npm install
+      - npm install -g serverless
+      
       
   build:
     commands:
       - echo Build started on date
       - echo Compiling the Node.js code
       - export AWS_ACCESS_KEY_ID=AKIAURNRGO3INWABY2CU
-      - export AWS_SECRET_ACCESS_KEY=${env.secrets-manager.SERVERLESS_ACESSS_KEY}
+      - export AWS_SECRET_ACCESS_KEY=${env.secrets-manager.SERVERLESS_ACCESS_KEY}
       
   post_build:
     commands:
       - echo Build completed on date
-      - sls deploy
+      - serverless deploy
