--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,4 +24,4 @@ phases:
   post_build:
     commands:
       - echo Build completed on date
-      - serverless deploy --aws-profile slack
+      - serverless deploy 
