--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
     commands:
       - echo Build started on date
       - echo Compiling the Node.js code
-      - export AWS_ACCESS_KEY_ID=$env.secrets-manager.SERVERLESS_AWS_ACCESS_KEY
+      - export AWS_ACCESS_KEY_ID=AKIAURNRGO3IFYWFMR6B
       - export AWS_SECRET_ACCESS_KEY=$env.secrets-manager.SERVERLESS_ACCESS_KEY
       
   post_build:
